--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 
 			body, html{
 				height: 100%;
+				padding: 0;
+				margin: 0;
+				border: 0;
 			}
 			
 			.bgimg{
 			    background-image: url('images/background.jpg');
-			    min-height: 100%;
-			    background-position: center;
+			    height: 100%;
 			    background-size: cover;
 			    color: white;
 			}
@@ -42,7 +44,7 @@
 			}
 
 			.title{
-				font-size: 45px;
+				font-size: 42px;
 		    	position: relative;
     			text-align: center;
 			}
@@ -55,7 +57,7 @@
 
 			.subtext{
     			text-align: center;
-				font-size: 20px;
+				font-size: 18px;
 				font-weight: bold;
 			}
 
