--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>ClimbingVan</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway"><link rel="icon" href="images/logo.png">
 		<style>
 			body, h1{
 				font-family: "Raleway", sans-serif;
@@ -52,7 +52,7 @@
 			.divider{
 				margin: auto;
 				width: 40%;
-				border: 1px solid black;
+				border: 1px solid grey;
 			}
 
 			.subtext{
